# promptshield

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
dashboard/: index.html
knowledge/: promptshield-jailbreaks.md
src/promptshield/: __init__.py  audit.py  config.py  main.py
src/promptshield/api/: models.py  routes.py
src/promptshield/engine/: __init__.py  detector.py  patterns.py  rules.py
tests/: test_api.py  test_detector.py
